<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="@drawable/bg1">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_margin="15dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_credentials"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint= "@string/your_first_name"
        android:textSize="15sp"
        app:helperTextEnabled="true"
        app:helperText="Required *"
        app:helperTextTextColor="@color/redHelper"
        android:layout_margin="10dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:counterEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/getName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:textSize="15sp"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_security_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint= "@string/enter_your_uid_number"
        android:textSize="15sp"
        app:helperTextEnabled="true"
        app:helperText="Required *"
        app:helperTextTextColor="@color/redHelper"
        android:layout_margin="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/getUidNo"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:maxLength="12"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_location_on_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint= "@string/enter_your_pincode"
        android:textSize="15sp"
        app:helperTextEnabled="true"
        app:helperText="Required *"
        app:helperTextTextColor="@color/redHelper"
        android:layout_margin="10dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/getPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="15sp"
            android:maxLength="6"
            android:maxLines="1"
            android:singleLine="true"
            android:importantForAutofill="no"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:enabled="true"
        android:id="@+id/sendOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:text="@string/send_otp"
        app:cornerRadius="10dp"
        android:textColor="@color/white"

        />



</LinearLayout>